--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,7 @@ img {
 
 .site-nav .link.current::after {
   position: absolute;
+
   display: flex;
   bottom: 0;
   content: "";
@@ -130,12 +131,12 @@ img {
 .logo {
   display: inline-block;
   margin-right: 93px;
-  color: var(--accent-color);
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  color: var(--accent-color);
 }
 .logo .logo-item {
   color: var(--primary-text-color);
@@ -167,11 +168,11 @@ img {
   padding-top: 32px;
   padding-bottom: 32px;
 
-  color: var(--paragraph-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.33;
   letter-spacing: 0.02em;
+  color: var(--paragraph-text-color);
   align-items: center;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -189,6 +190,7 @@ img {
 .add-icons {
   margin-right: 10px;
   fill: var(--primary-text-color);
+
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -196,10 +198,10 @@ img {
 /* section-title*/
 .section-title {
   margin-bottom: 50px;
-  color: var(--primary-text-color);
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
+  color: var(--primary-text-color);
   text-align: center;
   letter-spacing: 0.03em;
 }
@@ -208,6 +210,7 @@ img {
 .section-hero {
   margin-top: 0px;
   padding: 200px 0;
+  max-width: 1600px;
 
   background-color: #2f303a;
   background-image: linear-gradient(
@@ -218,7 +221,6 @@ img {
     url(../images/overlay.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  max-width: 1600px;
   background-size: cover;
 }
 .main-title {
@@ -226,13 +228,13 @@ img {
   margin: 0 auto;
   margin-bottom: 30px;
 
-  color: var(--primery-bg-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.06em;
+  color: var(--primery-bg-color);
 }
 /* Hero main button*/
 .hero-btn {
@@ -245,13 +247,13 @@ img {
   width: 200px;
   height: 50px;
 
-  color: var(--primery-bg-color);
-  background-color: var(--accent-color);
   font-weight: 700;
   font-family: Roboto;
   font-size: 16px;
   line-height: 1.86;
   letter-spacing: 0.06em;
+  color: var(--primery-bg-color);
+  background-color: var(--accent-color);
   text-decoration: none;
   cursor: pointer;
 
@@ -304,11 +306,12 @@ img {
   position: absolute;
   top: 8px;
   right: 8px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   background-color: var(--primery-bg-color);
   border-color: rgba(0, 0, 0, 0.1);
-  width: 30px;
-  height: 30px;
+  cursor: pointer;
 }
 
 .modal-btn {
@@ -354,29 +357,29 @@ img {
 }
 
 .benefits-img {
-  background-color: #f5f4fa;
   object-fit: none;
+  background-color: #f5f4fa;
 }
 .benefits-img:nth-child(4) {
   margin-right: 0;
 }
 
 .benefits-subtitle {
-  color: var(--primary-text-color);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  color: var(--primary-text-color);
 }
 
 .benefits-text {
   margin-top: 10px;
 
-  color: var(--paragraph-text-color);
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  color: var(--paragraph-text-color);
 }
 /* section WORKS */
 .works {
@@ -398,6 +401,7 @@ img {
 
 .work-text {
   position: absolute;
+
   bottom: 0%;
   width: 370px;
   padding-top: 27px;
@@ -435,18 +439,18 @@ img {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  color: var(--primary-text-color);
   text-align: center;
+  color: var(--primary-text-color);
 }
 
 .position {
   margin-top: 10px;
 
-  color: var(--paragraph-text-color);
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   text-align: center;
+  color: var(--paragraph-text-color);
 }
 .members-card {
   padding: 30px 5px 0;
@@ -462,19 +466,16 @@ img {
   gap: 10px;
 }
 .icon-card {
-  display: flex;
   width: 44px;
   height: 44px;
-  align-items: center;
-  justify-content: center;
 }
 
 .icon-link {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 44px;
-  height: 44px;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -484,8 +485,8 @@ img {
   width: 20px;
   height: 20px;
   fill: var(--icons-color);
-  align-items: center;
-  justify-content: center;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-link:hover,
@@ -498,6 +499,7 @@ img {
 }
 
 /* Section CLIENTS */
+
 .clients-list {
   display: flex;
 }
@@ -523,17 +525,12 @@ img {
 .icon-clients {
   fill: currentcolor;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.icon-clients:hover,
-.icon-clients:active {
-  background-color: var(--primery-bg-color);
-  fill: var(--accent-color);
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-link:hover,
 .client-link:focus {
-  color: var(--accent-color);
   border: 1px solid var(--accent-color);
+  color: var(--accent-color);
 }
 
 /* FOOTER */
@@ -549,12 +546,12 @@ img {
 .logo-footer {
   display: inline-block;
   margin-bottom: 20px;
-  color: var(--accent-color);
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  color: var(--accent-color);
 }
 .logo-light {
   color: var(--primery-bg-color);
@@ -564,11 +561,11 @@ address {
   font-style: normal;
 }
 .address-footer .add-footer {
-  color: var(--paragraph-text-color);
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  color: var(--paragraph-text-color);
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -590,11 +587,11 @@ address {
 }
 .footer-social-title {
   margin-bottom: 20px;
-  color: var(--primery-bg-color);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+  color: var(--primery-bg-color);
 }
 
 .social-list {
@@ -607,6 +604,7 @@ address {
   fill: var(--primery-bg-color);
   align-items: center;
   justify-content: center;
+
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -616,8 +614,8 @@ address {
   justify-content: center;
   width: 44px;
   height: 44px;
-  background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -646,18 +644,19 @@ address {
 }
 .button {
   padding: 6px 22px;
-  color: var(--primary-text-color);
-  background-color: #f5f4fa;
   font-family: inherit;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.63;
-  cursor: pointer;
-
   border-radius: 4px;
   border: none;
+  color: var(--primary-text-color);
+  background-color: #f5f4fa;
+  cursor: pointer;
+
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -703,7 +702,8 @@ address {
 .portfolio-link {
   display: block;
   text-decoration: none;
-  transition: box-shadow 25ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-link:focus,
 .portfolio-link:hover {
@@ -716,6 +716,7 @@ address {
 
 .overlay-box {
   position: relative;
+
   width: 370px;
   height: 294px;
   overflow: hidden;
@@ -723,10 +724,12 @@ address {
 
 .overlay {
   position: absolute;
+
   bottom: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
+
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -751,20 +754,20 @@ address {
 }
 
 .portfolio-menu {
-  color: var(--primary-text-color);
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   text-decoration: none;
+  color: var(--primary-text-color);
 }
 
 .portfolio-selection {
   margin-top: 4px;
 
-  color: var(--paragraph-text-color);
   font-size: 16px;
   line-height: 1.91;
   letter-spacing: 0.03em;
   text-decoration-style: none;
+  color: var(--paragraph-text-color);
 }
