--- a/css/styles.css
+++ b/css/styles.css
@@ -519,7 +519,8 @@ img {
   align-items: center;
   justify-content: center;
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-clients {
@@ -710,7 +711,7 @@ address {
   box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
     0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
 }
-.item:hover .overlay {
+.portfolio-link:hover .overlay {
   transform: translateY(0%);
 }
 
